--- a/css/hangman_style.css
+++ b/css/hangman_style.css
@@ -1,5 +1,5 @@
 body{
-
+    font: 1em sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -42,8 +42,6 @@ span {
     background-color: yellow;
 }
 
-
-
 .input-list li {
     display: inline-block;
     width: 50px;
@@ -59,4 +57,143 @@ span {
 
 .input-list li.spaceChar{
     border: solid 0px #888;
+}
+
+
+
+/*  phrases.php  */
+.button-div{
+display: flex;
+justify-content: space-between;
+padding: 5px;
+}
+
+.add-phrase-button{
+    height: 40px;
+    width: 120px;
+    border-radius: 5px;
+    background-color:aliceblue;
+    font-size: medium;
+}
+.remove-phrase-button{
+    height: 40px;
+    width: 150px;
+    border-radius: 5px;
+    background-color:aliceblue;
+    font-size: medium;
+}
+.modify-phrase-button{
+    height: 40px;
+    width: 120px;
+    border-radius: 5px;
+    background-color:aliceblue;
+    font-size: medium;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+table{
+    table-layout:fixed;
+    width:98%;
+    border: solid 3px black;
+    border-radius: 25px;
+    background-color: lightgrey;
+}
+
+tr{
+    text-align: center;
+} 
+
+td{
+    padding-bottom: 1%;
+}
+th{
+    padding-bottom: 2%;
+}
+.phrase_table{
+    margin-left: auto;
+    margin-right: auto;
+}
+.table_title{
+    font-size: 30px;
+}
+
+.table_data{
+    font-size: 20px;
+}
+
+select{
+    padding: 5px;
+    display: inline-block;
+}
+
+.page_link_button{
+    font-size: 25px;
+    display: inline-block;
+    width: 4%;
+    text-align: center;
+    border: solid 1px #888;
+    border-radius: 10%;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    padding: .5%;
+}
+
+.page_link_div{
+    display: block;
+    margin-right: 0;
+    margin-left: auto;
+    text-align: right;    
+}
+
+.dots{
+    display: inline-flex;
+    font-size: 40px;
+}
+
+/*  Add phrase  */
+
+.form_title{
+    margin: .5%;
+}
+.name_input{
+    margin: .5%;
+}
+.topic_input{
+    margin: .5%;
+}
+.phrase-input{
+    margin: .5%;
+}
+.submit-button{
+    margin: .5%;
+}
+.phrase_form{
+    padding-top: 25vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    vertical-align: center;
+    text-align: center;
+    font-family: 'Zen Kurenaido', sans-serif;
+    font-weight: 400;
+
+}
+.add_phrase_button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family: 'Zen Kurenaido', sans-serif;
+    font-weight:400;
+    color:black;
+    background-color: lightgreen;
+    text-align:center;
+
 }
